--- a/TechnicalServiceUI/Views/Shared/Components/_Description/Default.cshtml
+++ b/TechnicalServiceUI/Views/Shared/Components/_Description/Default.cshtml
@@ -69,5 +69,5 @@
                 </div>
             </div>
         </div>
-    </div> <!-- container-fluid -->
-</div> <!-- tm-container -->
+    </div> 
+</div> 
